--- a/BuchLeaflet/presentation/index.html
+++ b/BuchLeaflet/presentation/index.html
@@ -103,6 +103,15 @@
 							In vier Schritten eine Karte zaubern!
 						</h2>
 					</section>
+					<section>
+						<p>In diesem Teil werden wir ...</p>
+						<ul>
+							<li>... todo.</li>
+							<li class="fragment">... todo</li>
+							<li class="fragment">... todo.</li>
+							<li class="fragment">... todo.</li>
+						</ul>
+					</section>
 
 					<section>
 						<p>Wir beginnen mit einer ganz einfachen HTML-Datei</p>
@@ -260,7 +269,7 @@
 
 
 				<!-- Teil 1a Exkurs-->
-				<section>Exkurs 1 - Koordinaten auf der Erde</section>
+				<section>Teil 1 (Exkurs 1 - Koordinaten auf der Erde)</section>
 
 				<section data-background-color="#eeeeee"> <!-- 679ed4 f9b431 85c03c-->
 					<section>
@@ -380,8 +389,8 @@
 
 
 
-				<!-- Teil 1a Exkurs-->
-				<section>Exkurs 2</section>
+				<!-- Teil 1b Exkurs-->
+				<section>Teil 1 (Exkurs 2 - Karten aus Kacheln)</section>
 
 				<section data-background-color="#eeeeee"> <!-- 679ed4 f9b431 85c03c-->
 					<section>
@@ -586,8 +595,8 @@
 
 
 
-				<!-- Teil 2 WMS Service-->
-				<section>Teil 2</section>
+				<!-- Teil 1 WMS Service-->
+				<section>Teil 1 WMS Service</section>
 
 				<section data-background-color="#85c03c"> <!-- 679ed4 f9b431 85c03c-->
 					<section>
@@ -732,14 +741,23 @@
 
 
 
-				<!-- Teil 3 Die Karte mit Daten bestücken -->
-				<section>Teil 3</section>
+				<!-- Teil 2 Die Karte mit Daten bestücken -->
+				<section>Teil 2</section>
 
 				<section data-background-color="#e84032"> <!-- 679ed4 f9b431 85c03c-->
 					<section>
 						<h2>
 							Die Karte mit Daten bestücken
 						</h2>
+					</section>
+					<section>
+						<p>In diesem Teil werden wir ...</p>
+						<ul>
+							<li>... todo.</li>
+							<li class="fragment">... todo</li>
+							<li class="fragment">... todo.</li>
+							<li class="fragment">... todo.</li>
+						</ul>
 					</section>
 					<section>
 						<p>Ein Punkt</p>
@@ -1298,14 +1316,23 @@
 
 
 
-				<!-- Teil 4a Exkurs-->
-				<section>Exkurs 3</section>
+				<!-- Teil 3a Exkurs-->
+				<section>Teil 3 (Exkurs 3)</section>
 
 				<section data-background-color="#eeeeee"> <!-- 679ed4 f9b431 85c03c-->
 					<section>
 						<h2>
 							GeoJSON einmal genau angeguckt
 						</h2>
+					</section>
+					<section>
+						<p>In diesem Teil werden wir ...</p>
+						<ul>
+							<li>... todo.</li>
+							<li class="fragment">Als Erstes sehen wir uns an, warum GeoJSON entwickelt wurde.</li>
+							<li class="fragment">Als Nächstes vergleichen wir die einzelnen Elemente mit den Objekten, die uns Leaflet zur Verfügung stellt.</li>
+							<li class="fragment">Und zu guter Letzt probieren wir die Methoden aus, die Leaflet dir – spezielle für das Verarbeiten von GeoJSON-Daten – anbietet.</li>
+						</ul>
 					</section>
 					<section>
 						<h2>
@@ -1614,8 +1641,8 @@
 				</section>
 
 
-				<!-- Teil 4 GeoJSON-->
-				<section>Teil 4</section>
+				<!-- Teil 3 GeoJSON-->
+				<section>Teil 3</section>
 
 				<section data-background-color="#679ed4">  <!-- 679ed4 f9b431 85c03c e84032-->
 					<section>
@@ -2087,6 +2114,15 @@
 							</tr>
 						</table>
 					</section>
+					<section>
+						<p>In diesem Teil haben wir ...</p>
+						<ul>
+							<li>... todo.</li>
+							<li class="fragment">Als Erstes haben wir GeoJSON genauer angesehen.</li>
+							<li class="fragment">Als Nächstes haben wir die Geoobjekte in GeoJSON und Leaflet verglichen.</li>
+							<li class="fragment">Und zu guter Letzt haben wir GeoJSON in Leaflet eingesetzt..</li>
+						</ul>
+					</section>
 				</section>
 
 
@@ -2099,8 +2135,8 @@
 
 
 
-				<!-- Teil 5 Heatmaps und Choroplethenkarten-->
-				<section>Teil 5</section>
+				<!-- Teil 4 Heatmaps und Choroplethenkarten-->
+				<section>Teil 4</section>
 
 				<section data-background-color="#f9b431"> <!-- 679ed4 f9b431 85c03c e84032-->
 					<section>
@@ -2653,8 +2689,8 @@
 
 
 
-				<!-- Teil 6 Benutzerdefinierte Marker-->
-				<section>Teil 6</section>
+				<!-- Teil 5 Benutzerdefinierte Marker-->
+				<section>Teil 5</section>
 
 				<section data-background-color="#85c03c"> <!-- 679ed4 f9b431 85c03c e84032-->
 					<section>
